bk_ida/gccida/c3/find_reg
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:1458:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v10; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:1485:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v37; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:1486:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v38; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:1492:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v44; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:1493:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v45; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:1498:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v50; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:1499:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v51; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:1505:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v57; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:1506:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v58; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:1611:27: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v9 = *( int *)( ( char *)&allocno_0->reg + v8); 
                          ^~~~~~~~~
                          allocno
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:1617:28: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v11 = *( int *)( ( char *)&allocno_0->reg + v8); 
                           ^~~~~~~~~
                           allocno
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:1625:28: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
if ( !*( int *)( ( char *)&allocno_0->calls_crossed + v8) ) 
                           ^~~~~~~~~
                           allocno
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:1630:49: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v14 = v162 | *( HARD_REG_ELT_TYPE *)( ( char *)&allocno_0->hard_reg_conflicts + v8); 
                                                ^~~~~~~~~
                                                allocno
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:1632:42: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v15 = *( HARD_REG_ELT_TYPE *)( ( char *)&allocno_0->regs_someone_prefers + v8) | v14 | ~regs_used_so_far; 
                                         ^~~~~~~~~
                                         allocno
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:1644:83: error: use of undeclared identifier 'machine_mode'
if ( !_bittest64( ( const __int64 *)&v19, v21) && ix86_hard_regno_mode_ok( v21, ( machine_mode)mode) ) 
                                                                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:1649:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v23 = ( ( unsigned int)( mode_class_0[mode] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:1686:83: error: use of undeclared identifier 'machine_mode'
if ( !_bittest64( ( const __int64 *)&v19, v21) && ix86_hard_regno_mode_ok( v21, ( machine_mode)mode) ) 
                                                                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:1691:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v28 = ( ( unsigned int)( mode_class_0[mode] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:1732:7: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v32 = allocno_0; 
      ^~~~~~~~~
      allocno
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reg/src/obj/global.o] Error 1
